--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.11.0",
     "element-plus": "^2.10.4",
+    "lightningcss": "^1.30.1",
     "tailwindcss": "^4.1.11",
     "vue": "^3.5.17",
     "vue-router": "4",
